# broken-webpage

./: .gitignore  Cargo.toml  global.css  package.json  tailwind.config.js
database/: Cargo.toml
database/src/: cmark_wrapper.rs  db.rs  lib.rs
db/: Cargo.toml  webserver-db.sqlite
db/src/: lib.rs
scripts/: README.md  tailwind.sh
src/: index_controller.rs  index_template.rs  lib.rs  main.rs  nav_controller.rs
static/css/: layout.css
static/js/: index.js
templates/: index.html  nav.html
templates/assets/css/: _layout.css
templates/assets/js/: index.js
templates/scss/: compile_sassy.sh
templates/scss/broken/: logs  watchdog.sh
templates/scss/stylesheets/: _layout.scss
todo/: README.md
webserver/: Cargo.toml  README.md  global.css  tailwind.config.js
webserver/src/: index_controller.rs  main.rs
webserver/static/css/: layout.css
webserver/static/js/: index.js
webserver/templates/: index.html  nav.html
