[package]
name = "broken-webpage"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = {version = "0.8.4", features = ["original-uri"]}
once_cell = "1.21.3"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tower-http = {version = "0.6.6", features = ["full"]}
