[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = {version = "0.8.4", features = ["original-uri", "query", "macros"]}
serde = {version = "1.0.219", features = ["derive", "std", ]}
tokio = { version = "1.45.1", features = ["full"] }
tower-http = {version = "0.6.6", features = ["full"]}
database = {path = "../database"} # I wonder if theres a CARGO_WORKSPACE_DIR, found some hacks online but non fit this usecase
anyhow = "1.0.98"
sqlx = {version= "0.8.6", features = ["sqlite", "runtime-tokio"]} 
